{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 53,
  "lineage": "6a0f7a75-4f2a-d60b-7098-f4433cfa8461",
  "resources": [
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.226.218.146",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-03T02:11:26.554-08:00",
            "id": "projects/hallowed-oven-369407/regions/us-central1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "hallowed-oven-369407",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/regions/us-central1/addresses/ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/zones/us-central1-a/instances/terraform-instance"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-05T03:20:37.936-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hallowed-oven-369407/global/firewalls/test-firewall-http",
            "log_config": [],
            "name": "test-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/global/networks/vpc-network",
            "priority": 1000,
            "project": "hallowed-oven-369407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/global/firewalls/test-firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "test-firewall-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-05T03:20:37.817-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hallowed-oven-369407/global/firewalls/default-allow-ssh-terraform",
            "log_config": [],
            "name": "default-allow-ssh-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/global/networks/vpc-network",
            "priority": 1000,
            "project": "hallowed-oven-369407",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/global/firewalls/default-allow-ssh-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210415",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/zones/us-central1-a/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/hallowed-oven-369407/zones/us-central1-a/instances/terraform-instance",
            "instance_id": "5804264741663055391",
            "label_fingerprint": "jFCi8FhiIzA=",
            "labels": {
              "app": "demo",
              "environment": "demo",
              "owner": "demouser",
              "ttl": "24"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "sshKeys": "test:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCkATE25XE1YHv1GCy1uPjWH3ljvjjtuP6TjhYBdDBtWwEybn8P0V05We9lxy5YBL4ZmxpLmy1pgKFYimln4T4wlHmLfbv/ii2Xik9siPXzDKwaEwpiiyJBpJnBjT3lJvCJaYESaAIjr7o8BXx8aJ7AKKTnxBs4msF9dlpqNVWItGrUObmxAQr7wajXu4kHlDcRc5H5qQJ0x7lwx9fR2CBtbPv5a05GcVOwI9biyntU1hucg8eWE3uc8F0k+4B4J6lqonXqOsPs4smrdGikaeC8/toJXjELkEajp+67VV32Fnn0e+3U+018uHMTMqFmeNJkWMhfdI6G4kEYp8zBM/cr bhargavi.1899@gmail.com"
            },
            "metadata_fingerprint": "a28U2krq3Nc=",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.218.146",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/global/networks/vpc-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/regions/us-central1/subnetworks/vpc-network",
                "subnetwork_project": "hallowed-oven-369407"
              }
            ],
            "project": "hallowed-oven-369407",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/zones/us-central1-a/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-server"
            ],
            "tags_fingerprint": "C1rDAq8yb_M=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.vm.google_compute_address.static",
            "module.vm.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/hallowed-oven-369407/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "hallowed-oven-369407",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hallowed-oven-369407/global/networks/vpc-network"
          }
        }
      ]
    }
  ]
}